--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 color: white;
             }
 
-            p, h3, a {
+            p, h3, a, li {
                 font-family: 'Roboto', sans-serif;
                 font-size: 3vh;
                 color: white;
@@ -77,11 +77,16 @@ body {
         <h1>Cesium Short Links Interface</h1>
         <h3>Welcome to the Cesium Short Links Interface! This is a basic page with links I've created so that I don't have to use a link shortener. The moajority of pages here are on the Cesium domain (cesium.gq), but there may be some external links to other sites such as the Horizons Forums, documents, etc.</h3>
         <button class="collapsible">Cesium</button>
-        <div class="content" style=""><p>There are no links in "Cesium" at this time.</p></div>
+        <div class="content" style=""><ul>
+            <li>Cesium <a href="home.html">(home)</a></li>
+            </ul></div>
         <button class="collapsible">Horizons</button>
         <div class="content" style=""><p>There are no links in "Horizons" at this time.</p></div>
         <button class="collapsible">Miscellaneous</button>
-        <div class="content" style=""><p>There are no links in "Miscellaneous" at this time.</p></div></div>
+        <div class="content" style=""><ul>
+            <li>The Bloggart <a href="bloggart.html">(bloggart)</a></li>
+            <li>AllOfUs Launchpad <a href="aou.html">(aou)</a></li>
+            </ul></div></div>
         <script>
             var coll = document.getElementsByClassName("collapsible");
             var i;
